--- a/main_app/chating_interface/views/interface.ejs
+++ b/main_app/chating_interface/views/interface.ejs
@@ -6,9 +6,12 @@
 </head>
 <body>
 <script type='module' src="Client.js"></script>
+<script type='module' src="geo.js"></script>
 <script src="socket.io/socket.io.js"></script>
+<div id="location"></div>
+<br><br><br>
+챗봇구간.
 <div id="message" style="background-color:#F5F5F5; width:400px; height:200px; OVERFLOW-Y:auto; word-wrap: break-word"></div>
-
 <div id="chatInput">
  메시지를 입력하세요 <input type='text' id='txtChat' name="txtChat">
 </div>
